--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/yoshimitsu64/themeforest.git",
+  "homepage": "/",
   "author": "Ilya Averkov",
   "license": "MIT",
   "private": false,
