feat: add paypal to payment modal

--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "babel-loader": "^9.1.0",
+    "dotenv": "^16.0.3",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^7.32.0 || ^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "^2.26.0",
@@ -39,6 +41,7 @@
   },
   "dependencies": {
     "@fluentui/react-icons": "^2.0.190",
+    "@paypal/react-paypal-js": "^7.8.2",
     "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
