feat: add slider

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,6 +37,9 @@
       ],
       "appTypes/*": [
         "./appTypes/*"
+      ],
+      "helpers/*": [
+        "./helpers/*"
       ]
     }
   },
