--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "private": false,
   "scripts": {
     "start": "webpack serve --config webpack/webpack.config.js --open",
-    "lint": "eslint \"**/*.{ts,tsx}\" --fix",
-    "build" : "yarn run build"
+    "lint": "eslint \"**/*.{ts,tsx}\" --fix"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
