--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "start": "webpack serve --config webpack/webpack.config.js --open",
+    "start": "webpack serve --config webpack.config.js --open",
     "lint": "eslint \"**/*.{ts,tsx}\" --fix"
   },
   "devDependencies": {
