--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "private": false,
   "scripts": {
     "start": "webpack serve --config webpack.config.js --open",
-    "lint": "eslint \"**/*.{ts,tsx}\" --fix"
+    "lint": "eslint \"**/*.{ts,tsx}\" --fix",
+    "build": "webpack --mode production"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
