--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
   "private": false,
   "scripts": {
     "start": "webpack serve --config webpack.config.js --open",
-    "lint": "eslint \"**/*.{ts,tsx}\" --fix",
-    "build": "webpack --mode production"
+    "lint": "eslint \"**/*.{ts,tsx}\" --fix"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.5",
+    "@babel/core": "^7.20.7",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "@types/react-dom": "^18.0.10",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "babel-loader": "^9.1.0",
+    "babel-plugin-styled-components": "^2.0.7",
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
     "eslint": "^7.32.0 || ^8.2.0",
@@ -39,13 +40,14 @@
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.10.0",
     "@fluentui/react-icons": "^2.0.190",
     "@paypal/react-paypal-js": "^7.8.2",
-    "@types/styled-components": "^5.1.26",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.5.0",
     "react-social-icons": "^5.15.0",
-    "styled-components": "^5.3.6"
+    "styled-components": "^5.3.6",
+    "yup": "^0.32.11"
   }
 }
