--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 REACT_APP_PAYPAL_KEY=AZjcxGmCdKrNRDFPuKwnE-IvOT7djCkU1Jly0nGOj_ygREJ6YJzVgImSiexnfyAVcEuulXRadnhThvyw
 REACT_APP_EMAIL_JS_SERVICE_ID=service_m7u4m5l
 REACT_APP_EMAIL_JS_TEMPLATE_ID=template_f48dfi6
+REACT_APP_EMAIL_JS_TEMPLATE_ID_2=template_qwpf5hr
 REACT_APP_EMAIL_JS_PUBLIC_KEY=H0SMyT9wziHq8zHpu
