--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ REACT_APP_EMAIL_JS_SERVICE_ID=service_m7u4m5l
 REACT_APP_EMAIL_JS_TEMPLATE_ID=template_f48dfi6
 REACT_APP_EMAIL_JS_TEMPLATE_ID_2=template_qwpf5hr
 REACT_APP_EMAIL_JS_PUBLIC_KEY=H0SMyT9wziHq8zHpu
+REACT_APP_GOOGLE_MAPS_KEY=AIzaSyBNoRp1CviunCG515NKWx9mEQf3HDkqZd8
