--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@emailjs/browser": "^3.10.0",
     "@fluentui/react-icons": "^2.0.190",
     "@paypal/react-paypal-js": "^7.8.2",
+    "@react-google-maps/api": "^2.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.5.0",
