--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.5.0",
+    "react-scripts": "^5.0.1",
     "react-social-icons": "^5.15.0",
     "styled-components": "^5.3.6",
     "yup": "^0.32.11"
