--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "start": "webpack serve --config webpack.config.js --open",
     "lint": "eslint \"**/*.{ts,tsx}\" --fix",
-    "build": "Set NODE_ENV=production&&webpack --config webpack.config.js"
+    "build": "react-scripts build"
   },
   "devDependencies": {
     "@babel/core": "^7.20.7",
@@ -26,13 +26,16 @@
     "babel-plugin-styled-components": "^2.0.7",
     "dotenv": "^16.0.3",
     "dotenv-webpack": "^8.0.1",
-    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint": "8.2.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-typescript": "^3.5.2",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-webpack-plugin": "^3.2.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "prettier": "2.8.1",
@@ -50,8 +53,21 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.5.0",
+    "react-scripts": "^5.0.1",
     "react-social-icons": "^5.15.0",
     "styled-components": "^5.3.6",
     "yup": "^0.32.11"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
