feature: add faqs page

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,6 +46,9 @@
       ],
       "validation/*": [
         "./validation/*"
+      ],
+      "animation/*": [
+        "./animation/*"
       ]
     }
   },
