--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-router-dom": "^6.5.0",
     "react-scripts": "^5.0.1",
     "react-social-icons": "^5.15.0",
+    "react-uuid": "^2.0.0",
     "styled-components": "^5.3.6",
     "yup": "^0.32.11"
   },
