--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@fluentui/react-icons": "^2.0.190",
     "@paypal/react-paypal-js": "^7.8.2",
     "@react-google-maps/api": "^2.17.1",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.5.0",
